--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gatsby-gitbook-boilerplate",
   "private": true,
   "description": "Documentation, built with mdx",
-  "author": "Praveen <praveen@hasura.io> (@praveenweb)",
+  "author": "George Clark <clarkgeorge76@gmail.com> (@h0rhay) || Praveen <praveen@hasura.io> (@praveenweb)",
   "version": "0.0.1",
   "dependencies": {
     "@babel/plugin-proposal-export-default-from": "^7.7.4",
