--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,8 @@
 [build]
   publish = "public"
   command = "npm run build"
+
+[[redirects]]
+  from = "/en/latest/"
+  to = "/introduction/"
+  status = 301
