--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "version": "0.0.1",
   "dependencies": {
     "@babel/plugin-proposal-export-default-from": "^7.7.4",
+    "@docsearch/js": "^3.0.0-alpha.37",
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
     "@emotion/styled-base": "^10.0.24",
@@ -16,7 +17,6 @@
     "@mdx-js/react": "^1.5.1",
     "@philpl/buble": "^0.19.7",
     "@playlyfe/gql": "^2.6.2",
-    "algoliasearch": "^3.35.1",
     "dotenv": "^8.2.0",
     "emotion": "^10.0.23",
     "emotion-server": "^10.0.17",
@@ -24,7 +24,6 @@
     "gatsby": "^2.24.58",
     "gatsby-image": "^2.4.17",
     "gatsby-link": "^2.2.27",
-    "gatsby-plugin-algolia": "^0.5.0",
     "gatsby-plugin-emotion": "^3.0.1",
     "gatsby-plugin-gtag": "^1.0.12",
     "gatsby-plugin-layout": "^1.1.18",
