start working on porting over the calculator

--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "start": "gatsby develop",
     "build": "gatsby build --prefix-paths",
     "format": "prettier --write \"src/**/*.{js,jsx,css,json}\"",
-    "lint": "eslint --fix \"src/**/*.{js,jsx}\""
+    "lint": "eslint --fix \"src/**/*.{js,jsx}\"",
+    "clean": "gatsby clean"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
