start porting over staking calculator

--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
   "version": "0.0.1",
   "dependencies": {
     "@babel/plugin-proposal-export-default-from": "^7.7.4",
+    "@ctrl/tinycolor": "^3.4.1",
     "@docsearch/js": "^3.0.0-alpha.37",
     "@emotion/core": "^10.0.22",
-    "@emotion/styled": "^10.0.23",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@emotion/styled-base": "^10.0.24",
     "@input-output-hk/front-end-core-components": "^1.0.9",
     "@input-output-hk/front-end-site-components": "^1.2.10",
+    "@input-output-hk/front-end-themes": "^1.2.6",
+    "@material-ui/core": "^4.12.4",
     "@mdx-js/loader": "^1.5.1",
     "@mdx-js/mdx": "^1.5.1",
     "@mdx-js/react": "^1.5.1",
+    "@mui/material": "^5.9.2",
     "@philpl/buble": "^0.19.7",
     "@playlyfe/gql": "^2.6.2",
     "dotenv": "^8.2.0",
@@ -55,7 +60,8 @@
     "react-live": "^2.2.2",
     "react-loadable": "^5.5.0",
     "styled-components": "^4.4.1",
-    "styled-icons": "^9.0.1"
+    "styled-icons": "^9.0.1",
+    "victory": "^36.5.3"
   },
   "license": "MIT",
   "main": "n/a",
