chore: Add root redirect

--- a/netlify.toml
+++ b/netlify.toml
@@ -452,6 +452,16 @@ status = 301
   status = 301
 
 [[redirects]]
+  from = "https://testnets.cardano.org/"
+  to = "https://docs.cardano.org/cardano-testnet/overview"
+  status = 301
+
+[[redirects]]
+  from = "https://testnets.cardano.org/en/"
+  to = "https://docs.cardano.org/cardano-testnet/overview"
+  status = 301
+
+[[redirects]]
   from = "https://testnets.cardano.org/en/testnets/cardano/overview/"
   to = "https://docs.cardano.org/cardano-testnet/overview"
   status = 301
