fix package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cardano Docs",
+  "name": "Cardano-Docs",
   "private": true,
   "description": "Documentation, built with mdx",
   "author": "George Clark <clarkgeorge76@gmail.com> (@h0rhay) || Praveen <praveen@hasura.io> (@praveenweb)",
