--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -1,7 +1,7 @@
 name: Check broken links
 on:
   schedule:
-    - cron: '0 12 * * *'
+    - cron: '15 * * * *'
 
 jobs:
   cron:
@@ -10,7 +10,6 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16.x'
-        cache: 'yarn'
       - name: Install dependencies
         run: yarn install broken-link-checker
       - name: Check Links
