run workflow on push for testing

--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -1,7 +1,10 @@
 name: Check broken links
 on:
   schedule:
-    - cron: '15 * * * *'
+    - cron: '0 12 * * *'
+  push:
+    branches:
+      - master
 
 jobs:
   cron:
