--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           node-version: '16.x'
       - name: Install dependencies
-        run: yarn install broken-link-checker
+        run: yarn add broken-link-checker
       - name: Check Links
         run: blc https://docs.cardano.org -ro
