fix(): add redirect for glossary and add additional glossary link, removing old one and old entry

--- a/netlify.toml
+++ b/netlify.toml
@@ -334,9 +334,13 @@
 
 [[redirects]]
   from = "/explore-cardano/glossary.html"
-  to = "/glossary/"
+  to = "https://www.essentialcardano.io/glossary?sort=alphabetica"
   status = 301
 
+[[redirects]]
+  from = "/glossary/"
+  to = "https://www.essentialcardano.io/glossary?sort=alphabetical"
+  status = 301
 
 [[redirects]]
 from = "/core-concepts/stake-pools"
