--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mdx-js/mdx": "^1.5.1",
     "@mdx-js/react": "^1.5.1",
     "@mui/material": "^5.9.2",
+    "@octokit/core": "^4.0.5",
     "@philpl/buble": "^0.19.7",
     "@playlyfe/gql": "^2.6.2",
     "dotenv": "^8.2.0",
@@ -61,7 +62,10 @@
     "react-instantsearch-dom": "^6.0.0",
     "react-live": "^2.2.2",
     "react-loadable": "^5.5.0",
+    "react-markdown": "^8.0.3",
+    "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^4.2.21",
+    "rehype-raw": "^6.1.1",
     "styled-components": "^4.4.1",
     "styled-icons": "^9.0.1",
     "victory": "^36.5.3"
