--- a/package.json
+++ b/package.json
@@ -86,5 +86,6 @@
     "gatsby-plugin-remove-trailing-slashes": "^2.1.17",
     "prettier": "^1.19.1",
     "prism-react-renderer": "^1.0.2"
-  }
+  },
+  "packageManager": "yarn@1.22.19"
 }
